[package]
name = "boltz-client-bindings"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.32.2", features = ["rand", "base64", "rand-std"] }
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust.git", rev = "feb17d3a3930849fae637b5ec172fcbece303c26" }
hex = "0.4.3"
pyo3 = "0.21.2"

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d" }

[profile.release-lto]
inherits = "release"
lto = true

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "_lib"  # private module to be nested into Python package
crate-type = ["cdylib"]
path = "rust/lib.rs"
