[package]
name = "boltz-client-bindings"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.32.2", features = ["rand", "base64", "rand-std"] }
boltz-client = { git = "https://github.com/dni/boltz-rust.git", rev = "2344b876cdb5a023fc223d2abd20bc0022787c8a" }
hex = "0.4.3"

[dependencies.pyo3]
version = "0.21.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
# features = ["abi3-py38"]

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d" }

[profile.release-lto]
inherits = "release"
lto = true

[lib]
# See https://github.com/PyO3/pyo3 for details
name = "boltz_client_bindings"
crate-type = ["cdylib"]
path = "src/lib.rs"
